feat: print dex count per protocol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ name = "rpc_check"
 path = "src/bin/rpc_check.rs"
 
 [[bin]]
-name = "dex_parse"
-path = "src/bin/dex_parse.rs"
+name = "dex_count"
+path = "src/bin/dex_count.rs"
