--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ env_logger = "0.11"
 log = "0.4"
 dotenv = "0.15"
 futures-util = "0.3"
+sha2 = "0.10"
+bs58 = "0.5"
+serde_json = "1.0.145"
+serde = { version = "1.0.228", features = ["derive"] }
 
 
 [[bin]]
@@ -22,3 +26,12 @@ path = "src/bin/rpc_check.rs"
 [[bin]]
 name = "dex_count"
 path = "src/bin/dex_count.rs"
+
+[[bin]]
+name = "idl_parse"
+path = "src/bin/idl_parse.rs"
+
+[[bin]]
+name = "swap_watch"
+path = "src/bin/swap_watch.rs"
+
