--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ sha2 = "0.10"
 bs58 = "0.5"
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
+dashmap = "6.1.0"
+reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
 
 
 [[bin]]
