--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
 dashmap = "6.1.0"
 reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
+directories = "6.0.0"
 
 
 [[bin]]
@@ -32,6 +33,10 @@ path = "src/bin/dex_count.rs"
 [[bin]]
 name = "idl_parse"
 path = "src/bin/idl_parse.rs"
+
+[[bin]]
+name = "token_list"
+path = "src/bin/token_list.rs"
 
 [[bin]]
 name = "swap_watch"
